# S.T.A.L.K.E.R.-AI-Quest-Generator

./: .gitignore  CHANGELOG.md  LICENSE  README.md  main.spec  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yaml
resource/generation/: icon.json
resource/prompt/: concept.txt  icon.txt  metadata.txt
src/: main.py  misc.py
src/config/: app.py  constants.py  parameters.py  preferences.py  text.py
src/generation/: entity.py
src/generation/engine/: soc.py
src/generation/model/: local.py  main.py  remote.py
src/generation/worker/: configurator.py  main.py  normal.py
src/ui/: configurator.py  dialog.py
src/ui/editor/: prompt.py  system_custom_text_editor.py
src/ui/exception/: main.py
src/ui/main/: widget.py  window.py
src/ui/preferences/: configurator.py  general.py  main.py  model.py  prompt.py  tab.py
