[project]
name = "stalker-ai-quest-generator"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "comfykit>=0.1.12",
    "deep-translator>=1.11.4",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pillow>=12.1.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyinstaller>=6.17.0",
    "pyside6>=6.10.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "prek>=0.4.4",
    "ruff>=0.15.17",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "scm"
update_changelog_on_bump = true
changelog_incremental = true
breaking_change_exclamation_in_title = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "W", "C4", "ANN"]